Footer display issue on mobile
Fixes #491

--- a/gonawin/static/css/gonawin.css
+++ b/gonawin/static/css/gonawin.css
@@ -278,17 +278,17 @@ body {
   /* Negative indent footer by its height */
   margin: 0 auto -60px;
   /* Pad bottom by footer height */
-  padding: 0 0 210px;
+  margin: 0 0 210px;
 }
 
 /* Set the fixed height of the footer here */
 #footer {
-  height: 60px;
   background-color: #00b9Ab;
   border-top: 2px solid #FF8447;
   z-index: 9999;
   position:absolute;
   width: 100%;
+  padding-bottom: 30px;
 }
 
 .footer-brand{
